Fixed keyboard on mobile

--- a/src/components/Keyboard/Keyboard.css
+++ b/src/components/Keyboard/Keyboard.css
@@ -16,8 +16,8 @@
   font-weight: 500;
   background-color: gray;
   color: white;
-  width: 10%;
-  max-width: 3rem;
+  width: 100%;
+  max-width: 2rem;
   height: 3.5rem;
   border: none;
   border-radius: 4px;
